/*
 * Copyright (C) 2016 Red Hat, Inc.
 *
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";

package flow;

import "flow/set.proto";

enum BoolFilterOp {
  OR = 0;
  AND = 1;
  NOT = 2;
}

message TermStringFilter {
  string Key = 1;
  string value = 2;
}

message TermInt64Filter {
  string Key = 1;
  int64 value = 2;
}

message NeStringFilter {
  string Key = 1;
  string Value = 2;
}

message NeInt64Filter {
  string Key = 1;
  int64 Value = 2;
}

message GtInt64Filter {
  string Key = 1;
  int64 Value = 2;
}

message LtInt64Filter {
  string Key = 1;
  int64 Value = 2;
}

message GteInt64Filter {
  string Key = 1;
  int64 Value = 2;
}

message LteInt64Filter {
  string Key = 1;
  int64 Value = 2;
}

message RegexFilter {
  string Key = 1;
  string Value = 2;
}

message Filter {
  TermStringFilter TermStringFilter = 1;
  TermInt64Filter TermInt64Filter = 2;

  GtInt64Filter GtInt64Filter = 3;
  LtInt64Filter LtInt64Filter = 4;
  GteInt64Filter GteInt64Filter = 5;
  LteInt64Filter LteInt64Filter = 6;

  BoolFilter BoolFilter = 7;
  RegexFilter RegexFilter = 8;
}

message BoolFilter {
  BoolFilterOp Op = 1;
  repeated Filter Filters = 2;
}

message Range {
  int64 From = 1;
  int64 To = 2;
}

message FlowSearchQuery {
  Filter Filter = 1;
  Range PaginationRange = 2;
  bool Sort = 3;
  bool Dedup = 4;
  string DedupBy = 5;
  string SortBy = 6;
}

message FlowSearchReply {
  FlowSet FlowSet = 1;
}
